# ChangeLog for net-im/qutim
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 May 2010; Viktor Lazarev <taurus101v@gmail.com> qutim-0.2.9999.ebuild,
  +metadata.xml:
  repoman payment, added ChangeLog and metadata.xml
