@@ -1,3 +1,4 @@
-EBUILD qutim-0.2.9999.ebuild 2531 RMD160 b8829db892314f8093ebbff8b393bf9a80757316 SHA1 1f8682902410c01710f071024a2c6fbe2ed08ca7 SHA256 e620adec36f57a0a2c4db8f4c4cf36c2e4293cf80ac28f29e69037ec2be9eae0
+EBUILD qutim-0.2.9999.ebuild 2555 RMD160 d0cb5712dbbf2593b928d176ad8e2aea45e4fe07 SHA1 c5bcc966ffc9b350db4a38959614bee9d62e7aba SHA256 1e830915dab907916c3707e86262cbfed35a2605ce65fb75e2dada2b9e7032fa
+EBUILD qutim-0.3.9999.ebuild 2586 RMD160 3766ddbb29c16dca9f64476894adf6436605103f SHA1 ace249064f3e87a1e1734f8bdee61dc00560c997 SHA256 0f9439931b92c8ec2113f3f55a2877923766b7fd9bb54df7ecbc8ef1c7228cd8
 MISC ChangeLog 259 RMD160 561733e75e2d3e661321eb1b983d2df5dc3c463f SHA1 f4212ec8faa4841be97203800f06f005d09b77ed SHA256 d951eb14dd148c56f3ec004fe7691eba818a9b47cb59c87c2846c596cd57d581
 MISC metadata.xml 825 RMD160 58170622b93ab4288d519750e29a3b78c9e4d72b SHA1 47d9262307a0d3caf1cc55c437e97e8012a5d128 SHA256 9036abf0ea9c9fa0e64765932b9d13b32f09e768086bfd4abc40072207fdde0a
